--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -16,4 +16,26 @@
 
     <script src="./script.js"></script>
 </body>
+</html> -->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Infinite Scrolling</title>
+    <link rel="stylesheet" href="./style.css">
+</head>
+
+<body>
+    <br><br>
+    <p>Endless Scrolling</p><br>
+
+    <div class="box">
+
+    </div>
+
+    <script src="./script.js"></script>
+</body>
+
 </html>
